[project]
name = "mov"
version = "0.3.0"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "minju210", email = "juliana6190210@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "numpy>=2.0.1",
    "pyarrow>=17.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true


[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.pdm.scripts]
test = "pytest"



[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
[project.scripts]
mov-ping = 'mov.cli:ping'

[project.urls]
Homepage = "https://github.com/minju210/movie"
Issues = "https://github.com/minju210/movie/issues"
